changed to index.html

--- a/game.html
+++ b/game.html
@@ -15,19 +15,19 @@
   <body>
     <header>
       <div class="logo">
-        <a href="home.html"
+        <a href="index.html"
           ><img
             id="logoimg"
             src="pictures/logo.png"
             alt="BirbBerry logo"
             title="BirbBerry" /></a
         ><br />
-        <a href="/home.html" class="logo-link">BirbBerry</a>
+        <a href="/index.html" class="logo-link">BirbBerry</a>
       </div>
       <br />
 
       <div class="topnav" id="myTopnav">
-        <a href="/home.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
         <a href="/contacts.html">Contacts</a>
         <a href="/login.html">Log in</a>
