url fix for About page on index

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       </div>
       <br />
       <div class="topnav" id="myTopnav">
-        <a href="/index.html">Home</a>
+        <a href="BirbBerry/index.html">Home</a>
         <a href="/about.html" class="active">About</a>
         <a href="/contacts.html">Contacts</a>
         <a href="/login.html">Log in</a>
