--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <br />
 
     <div class="topnav" id="myTopnav">
-      <a href="/index.html" class="active">Home</a>
-      <a href="/about.html">About</a>
+      <a href="BirbBerry/index.html" class="active">Home</a>
+      <a href="BirbBerry/about.html">About</a>
       <a href="/contacts.html">Contacts</a>
       <a href="/login.html">Log in</a>
       <a href="/register.html">Register</a>
