--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="topnav" id="myTopnav">
       <a href="BirbBerry/index.html" class="active">Home</a>
       <a href="BirbBerry/about.html">About</a>
-      <a href="/contacts.html">Contacts</a>
-      <a href="/login.html">Log in</a>
-      <a href="/register.html">Register</a>
+      <a href="contacts.html">Contacts</a>
+      <a href="login.html">Log in</a>
+      <a href="register.html">Register</a>
       <a href="/game.html">Game</a>
       <!-- <a href="/schema.html">Schema</a> -->
       <form action="" class="search-form">
