--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   <header>
     <div class="logo">
       <a href="index.html"><img id="logoimg" src="pictures/logo.png" alt="BirbBerry logo" title="BirbBerry" /></a><br />
-      <a href="/index.html" class="logo-link">BirbBerry</a>
+      <a href="index.html" class="logo-link">BirbBerry</a>
     </div>
     <br />
 
     <div class="topnav" id="myTopnav">
-      <a href="BirbBerry/index.html" class="active">Home</a>
-      <a href="BirbBerry/about.html">About</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
       <a href="contacts.html">Contacts</a>
       <a href="login.html">Log in</a>
       <a href="register.html">Register</a>
-      <a href="/game.html">Game</a>
+      <a href="game.html">Game</a>
       <!-- <a href="/schema.html">Schema</a> -->
       <form action="" class="search-form">
         <input type="text" placeholder="Search" class="search-input" />
         <button type="submit" class="search-btn">
-          <img class="search-img" src="/pictures/searchIcon.svg" alt="" width="27" height="27" />
+          <img class="search-img" src="pictures/searchIcon.svg" alt="" width="27" height="27" />
         </button>
       </form>
       <a href="javascript:void(0);" class="icon" onclick="hamburgerMenuClick()">
