--- a/game.html
+++ b/game.html
@@ -22,17 +22,17 @@
             alt="BirbBerry logo"
             title="BirbBerry" /></a
         ><br />
-        <a href="/index.html" class="logo-link">BirbBerry</a>
+        <a href="index.html" class="logo-link">BirbBerry</a>
       </div>
       <br />
 
       <div class="topnav" id="myTopnav">
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/contacts.html">Contacts</a>
-        <a href="/login.html">Log in</a>
-        <a href="/register.html">Register</a>
-        <a href="/game.html" class="active">Game</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contacts.html">Contacts</a>
+        <a href="login.html">Log in</a>
+        <a href="register.html">Register</a>
+        <a href="game.html" class="active">Game</a>
         <!-- <a href="/schema.html">Schema</a> -->
         <form action="" class="search-form">
           <input type="text" placeholder="Search" class="search-input" />
