--- a/register.html
+++ b/register.html
@@ -27,12 +27,12 @@
       </div>
       <br />
       <div class="topnav" id="myTopnav">
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/contacts.html">Contacts</a>
-        <a href="/login.html">Log in</a>
-        <a href="/register.html" class="active">Register</a>
-        <a href="/game.html">Game</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contacts.html">Contacts</a>
+        <a href="login.html">Log in</a>
+        <a href="register.html" class="active">Register</a>
+        <a href="game.html">Game</a>
         <!-- <a href="/schema.html">Schema</a> -->
         <form action="" class="search-form">
           <input type="text" placeholder="Search" class="search-input" />
