navigation URL fix #2

--- a/game.html
+++ b/game.html
@@ -39,7 +39,7 @@
           <button type="submit" class="search-btn">
             <img
               class="search-img"
-              src="/pictures/searchIcon.svg"
+              src="pictures/searchIcon.svg"
               alt=""
               width="27"
               height="27"
