--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           <button type="submit" class="search-btn">
             <img
               class="search-img"
-              src="/pictures/searchIcon.svg"
+              src="pictures/searchIcon.svg"
               alt=""
               width="27"
               height="27"
