--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
             alt="BirbBerry logo"
             title="BirbBerry" /></a
         ><br />
-        <a href="/index.html" class="logo-link">BirbBerry</a>
+        <a href="index.html" class="logo-link">BirbBerry</a>
       </div>
       <br />
       <div class="topnav" id="myTopnav">
@@ -39,7 +39,7 @@
           <button type="submit" class="search-btn">
             <img
               class="search-img"
-              src="/pictures/searchIcon.svg"
+              src="pictures/searchIcon.svg"
               alt=""
               width="27"
               height="27"
