--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       feathers and blue under their tails. Their coloration provides
                       excellent camouflage against the colors of their native habitat.
                       Quaker parrots that have been domestically bred also come in
-                      other colors like light blue and yellow.
+                      other colors like light blue and yellow. They are cute
                     </p>
                   </div>
                 </div>
