added Services page

--- a/game.html
+++ b/game.html
@@ -28,6 +28,7 @@
 
       <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
         <a href="about.html">About</a>
         <a href="contacts.html">Contacts</a>
         <a href="login.html">Log in</a>
