--- a/services.html
+++ b/services.html
@@ -29,8 +29,8 @@
       <br />
       <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="about.html" class="active">About</a>
+        <a href="services.html" class="active">Services</a>
+        <a href="about.html">About</a>
         <a href="contacts.html">Contacts</a>
         <a href="login.html">Log in</a>
         <a href="register.html">Register</a>
@@ -91,140 +91,131 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
-                  <a target="_blank" href="pictures/parrotrescue-about.jpg">
+                  <a target="_blank" href="pictures/adopt1.jpg">
                     <img
-                      src="pictures/parrotrescue-about.jpg"
+                      src="pictures/adopt1.jpg"
                       alt="Forest"
                       class="about-img"
                     />
                   </a>
                   <div class="card-text">
-                    <h1>Welcome to Iowa Parrot Rescue!</h1>
+                    <h1>Why Adopt from Iowa Parrot Rescue?</h1>
                     <br /><br />
-                    Discover a sanctuary where the chatter and vibrant colors of
-                    feathered friends fill the air! At Iowa Parrot Rescue, we
-                    are dedicated to providing a haven for parrots in need of
-                    care and compassion. Our founder, featured in the
-                    heartwarming scene of a gentle interaction with a stunning
-                    Military Macaw, embodies the spirit of our mission: to
-                    rescue, rehabilitate, and rehome these intelligent and
-                    majestic birds.
+                    Welcome to Iowa Parrot Rescue, where feathered friends find
+                    their forever homes! Our adoption service is designed to
+                    match loving families with parrots in need of a caring and
+                    permanent home. By choosing to adopt from Iowa Parrot
+                    Rescue, you not only open your heart and home to a wonderful
+                    companion but also contribute to the well-being of these
+                    incredible birds.
                     <br />
                     <br />
-                    Nestled within our spacious indoor facility, each bird finds
-                    a slice of paradise. From the intricate network of natural
-                    perches to the riot of colorful toys that decorate our
-                    space, we’ve created an environment that caters to the
-                    physical and psychological well-being of our avian
-                    residents. It's a place where the squawks of joy and
-                    flutters of activity never cease, as each parrot embarks on
-                    a journey towards a hopeful future.
+                    <b>Why Adopt from Iowa Parrot Rescue?</b>
                     <br /><br />
-                    Our commitment extends beyond rescue; we educate and
-                    advocate for the proper care and understanding of these
-                    complex creatures. With community support and the dedication
-                    of our volunteers, we strive to make a difference in the
-                    lives of parrots, one feathered friend at a time.
-                    <br /><br />
-                    Join us in our quest to offer a second chance to these
-                    incredible birds. Whether you're looking to adopt,
-                    volunteer, or support our cause, you're always welcome at
-                    Iowa Parrot Rescue – where every parrot has a story and
-                    every helping hand creates a brighter future.
+                    <b>Compassionate Care: </b>Our parrots receive expert care
+                    and attention from dedicated staff and volunteers. We
+                    prioritize the physical and emotional well-being of each
+                    bird, ensuring they are ready for their next chapter in a
+                    loving home. <br /><br />
+                    <b>Variety of Parrots: </b>Whether you're looking for a
+                    talkative African Grey, a playful Conure, or a colorful
+                    Macaw, Iowa Parrot Rescue offers a diverse selection of
+                    parrot species. Explore our adoption gallery to meet the
+                    charming characters awaiting your visit.<br /><br />
+                    <b>Adoption Process: </b>Our adoption process is designed to
+                    make sure both you and the parrot are a perfect match. We
+                    conduct thorough screenings and provide guidance on parrot
+                    care to ensure a smooth transition for your new feathered
+                    friend.<br /><br />
                   </div>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
-                  <a target="_blank" href="pictures/rescueparrot.webp">
+                  <a target="_blank" href="pictures/adopt2.jpg">
                     <img
-                      src="pictures/rescueparrot.webp"
+                      src="pictures/adopt2.jpg"
                       alt="Forest"
                       class="about-img"
                     />
                   </a>
                   <div class="card-text">
-                    <h1>Come Visit Us at Iowa Parrot Rescue!</h1>
+                    <h1>How to Adopt?</h1>
                     <br /><br />
-                    Step into a world where the love for birds is contagious! At
-                    Iowa Parrot Rescue, not only do we provide a sanctuary for
-                    parrots in need, but we also open our doors to bird
-                    enthusiasts and compassionate souls who wish to experience
-                    the joy these birds bring into our lives.
-                    <br /><br />
-                    Our delightful indoor paradise, as shown with one of our
-                    happy visitors sharing a moment with a resplendent Hyacinth
-                    Macaw, invites you to witness the bond between humans and
-                    birds. This gentleman's smile is a testament to the
-                    fulfilling encounters that await you here.
-                    <br /><br />
-                    Wearing his humor with pride, his t-shirt playfully reads,
-                    "Just a girl who loves doves and birds," symbolizing our
-                    inclusive and light-hearted environment. It's a place where
-                    laughter mingles with bird calls, and where everyone,
-                    regardless of age or background, can find a feathery friend
-                    to connect with.
-                    <br /><br />
-                    Our array of educational talks, interactive sessions, and
-                    hands-on activities make every visit memorable. Whether
-                    you're a seasoned bird lover or new to the world of avian
-                    wonders, there's always something new to learn and
-                    experience.
-                    <br /><br />
-                    So why wait? Spread your wings and come visit us at Iowa
-                    Parrot Rescue! It's not just a visit; it's an adventure that
-                    could lead to a lifetime of love and companionship with one
-                    of nature's most remarkable creatures.
+                    <b>Visit our Rescue Center:</b> Schedule a visit to Iowa
+                    Parrot Rescue to meet our parrots in person. Spend time
+                    interacting with them to discover the unique personality
+                    that might steal your heart. <br /><br />
+                    <b>Adoption Counseling:</b> Our experienced staff will guide
+                    you through the adoption process, helping you choose the
+                    parrot that fits your lifestyle and preferences. We are here
+                    to answer any questions and provide valuable insights into
+                    parrot care. Home Visit: As part of our commitment to the
+                    well-being of our parrots, we may conduct a home visit to
+                    ensure a safe and suitable environment for your new
+                    feathered companion. <br /><br />
+                    <b>Home Visit:</b> As part of our commitment to the
+                    well-being of our parrots, we may conduct a home visit to
+                    ensure a safe and suitable environment for your new
+                    feathered companion. <br /><br />
+                    <b>Adoption Day:</b> Once approved, you'll have the joy of
+                    welcoming your new parrot into your home. We provide
+                    adoption packages with essential information, and our team
+                    is available for ongoing support as you and your parrot
+                    build a lasting bond. <br /><br />
+                    By choosing Iowa Parrot Rescue for adoption, you are not
+                    just gaining a feathered friend; you are becoming part of a
+                    community dedicated to the welfare of parrots. Join us in
+                    providing loving homes for these intelligent and charismatic
+                    birds.<br /><br />
+                    Ready to embark on a new adventure with a parrot companion?
+                    Contact Iowa Parrot Rescue today and start the journey
+                    towards a lifelong friendship!<br /><br />
                   </div>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
-                  <a target="_blank" href="pictures/babyrescue.jfif">
+                  <a target="_blank" href="pictures/visit.jpg">
                     <img
-                      src="pictures/babyrescue.jfif"
+                      src="pictures/visit.jpg"
                       alt="Forest"
                       class="about-img"
                     />
                   </a>
                   <div class="card-text">
-                    <h1>
-                      Meet Our Feathered Youngsters at Iowa Parrot Rescue!
-                    </h1>
+                    <h1>Visit the Parrots</h1>
                     <br /><br />
-                    Get ready to have your heartstrings tugged by the charming
-                    antics of our baby parrots! At Iowa Parrot Rescue, we're not
-                    just a haven for adult parrots, but also a nurturing ground
-                    for the young ones finding their way in the world. The
-                    picture captures the adorable curiosity of a young African
-                    Grey parrot, engaging with a toy bell, an enchanting moment
-                    that exemplifies the playful and inquisitive nature of our
-                    avian juveniles.
+                    Discover the enchanting world of parrots by visiting Iowa
+                    Parrot Rescue! Our "Visit the Parrots" service invites you
+                    to experience the joy of interacting with these intelligent
+                    and charismatic birds in a safe and welcoming environment.
+                    Whether you're a seasoned parrot enthusiast or a curious
+                    first-time visitor, our rescue center offers a unique
+                    opportunity to connect with our feathered residents.<br /><br />
+                    <b>What to Expect During Your Visit:</b><br /><br />
+                    <b>Educational Experience:</b> Immerse yourself in the
+                    fascinating world of parrots as our knowledgeable staff
+                    provides insights into different species, their behaviors,
+                    and the importance of conservation efforts. Learn about the
+                    unique characteristics that make each parrot special.
+                    <b>Interactive Sessions:</b> Get up close and personal with
+                    our resident parrots during interactive sessions. Enjoy the
+                    thrill of feeding, playing, and communicating with these
+                    charming birds, fostering a deeper appreciation for their
+                    individual personalities. <br /><br />
+                    <b>Guided Tours:</b> Take a guided tour of our rescue
+                    center, where you'll have the chance to observe the various
+                    habitats, enrichment activities, and learn about our
+                    commitment to providing the best care for our parrots. Our
+                    team will be on hand to answer any questions and share
+                    heartwarming stories about the birds in our care.
                     <br /><br />
-                    With soft, grey plumage and eyes full of wonder, our baby
-                    parrots like this little one are sure to enchant you with
-                    their playful behaviors and eager learning. It's a joyous
-                    sight to see them interact with the world around them,
-                    developing their skills and personalities.
+                    <b>Photo Opportunities:</b> Capture unforgettable moments
+                    with our vibrant and colorful parrots. Share your experience
+                    with friends and family by taking photos with our feathered
+                    friends, creating lasting memories of your visit.
                     <br /><br />
-                    When you visit us, you'll have the opportunity to witness
-                    these early stages of life, where every new sound and
-                    texture is an adventure for our feathered friends. You'll
-                    see firsthand the care and dedication that goes into raising
-                    these intelligent birds, ensuring they grow up healthy and
-                    socialized.
-                    <br /><br />
-                    Whether you're considering adopting a parrot or simply want
-                    to enjoy their youthful antics, our doors are open. Come
-                    experience the magic of new life and the tender beginnings
-                    of bird-human friendships at Iowa Parrot Rescue. It's a
-                    visit that promises to be as educational as it is
-                    heartwarming!
-                    <br /><br />
-                    This text aims to draw attention to the special experience
-                    of interacting with baby parrots at your rescue center,
-                    highlighting the emotional and educational aspects of such
-                    an encounter.
                   </div>
                 </div>
               </div>
