--- a/contacts.html
+++ b/contacts.html
@@ -29,6 +29,7 @@
       <br />
       <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
         <a href="about.html">About</a>
         <a href="contacts.html" class="active">Contacts</a>
         <a href="login.html">Log in</a>
