--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
+      <a href="services.html">Services</a>
       <a href="about.html">About</a>
       <a href="contacts.html">Contacts</a>
       <a href="login.html">Log in</a>
