--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     </div>
 
   </header>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NYJ1882RQQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NYJ1882RQQ');
+</script>
   <main>
     <div id="myModal" class="modal">
 
