--- a/register.html
+++ b/register.html
@@ -12,7 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BirbBerry</title>
   </head>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
+    gtag("config", "G-NYJ1882RQQ");
+  </script>
   <body>
     <header>
       <div class="logo">
