added Blog, added faq, task

--- a/schema.html
+++ b/schema.html
@@ -82,7 +82,7 @@
 
       </div>
     </main>
-    <div class="bubbles">
+<!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -129,7 +129,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
