--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@
       </div>
     </main>
     <style></style>
-    <div class="bubbles">
+    <!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -304,7 +304,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
