--- a/contacts.html
+++ b/contacts.html
@@ -95,6 +95,15 @@
       </div>
       <div class="card-register">
         <h1 class="title-h1">Contacts</h1>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/i5Kgu_qXWLk?si=c-pgKQnJjJO6lZ_B"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
         <table class="table">
           <tr>
             <th>Email</th>
@@ -118,7 +127,7 @@
       </div>
       <div class="contacts-ads sidebar-ads"></div>
     </main>
-    <div class="bubbles">
+    <!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -165,7 +174,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
