--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <a href="login.html">Log in</a>
       <a href="register.html">Register</a>
       <a href="game.html">Game</a>
+      <a href="blog.html">Blog</a>
+      <a href="faq.html">FAQ</a>
       <!-- <a href="/schema.html">Schema</a> -->
       <form action="" class="search-form">
         <input type="text" placeholder="Search" class="search-input" />
@@ -364,7 +366,7 @@
 
 
   </main>
-  <div class="bubbles">
+<!--   <div class="bubbles">
     <span style="--i: 11"></span>
     <span style="--i: 12"></span>
     <span style="--i: 14"></span>
@@ -411,7 +413,7 @@
     <span style="--i: 27"></span>
     <span style="--i: 29"></span>
     <span style="--i: 30"></span>
-  </div>
+  </div> -->
   <footer>
     <div class="nav-footer">
       <ul class="navfooter-ul">
