--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </main>
-    <div class="bubbles">
+    <!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -155,7 +155,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
