--- a/register.html
+++ b/register.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </main>
-    <div class="bubbles">
+    <!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -171,7 +171,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
