--- a/services.html
+++ b/services.html
@@ -248,7 +248,7 @@
       </div>
     </main>
     <style></style>
-    <div class="bubbles">
+    <!--     <div class="bubbles">
       <span style="--i: 11"></span>
       <span style="--i: 12"></span>
       <span style="--i: 14"></span>
@@ -295,7 +295,7 @@
       <span style="--i: 27"></span>
       <span style="--i: 29"></span>
       <span style="--i: 30"></span>
-    </div>
+    </div> -->
     <footer>
       <div class="nav-footer">
         <ul class="navfooter-ul">
