fixed share blog1

--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
         </script>
 
         <!-- Your share button code -->
-        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
+        <div class="fb-share-button" data-href="https://missbehavior.github.io/Birbberry/blog.html" data-layout="button_count"></div>
         <a href="https://twitter.com/intent/tweet?button_hashtag=Blog1&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
           >Tweet #Blog1</a
         >
@@ -128,12 +128,12 @@
             fjs.parentNode.insertBefore(js, fjs);
           })(document, "script", "facebook-jssdk");
         </script>
+        <!-- Your share button code -->
+        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
         <a href="https://twitter.com/intent/tweet?button_hashtag=Blog2&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
           >Tweet #Blog2</a
         >
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!-- Your share button code -->
-        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
         <img class="blog-img" src="pictures/blog2.jpg" width="600" height="400" alt="Image of a Kakapo" />
 
         <p class="blog-text">
@@ -163,12 +163,12 @@
             fjs.parentNode.insertBefore(js, fjs);
           })(document, "script", "facebook-jssdk");
         </script>
+        <!-- Your share button code -->
+        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
         <a href="https://twitter.com/intent/tweet?button_hashtag=Blog3&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
           >Tweet #Blog3</a
         >
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!-- Your share button code -->
-        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
         <img class="blog-img" src="pictures/blog3.webp" alt="Image of a Quacker" />
 
         <p class="blog-text">
